src/test/compile-fail/bad-main.rs
// error-pattern:Wrong type in main function

fn main(x: int) { }